--- a/client/src/styles/modules/_general.scss
+++ b/client/src/styles/modules/_general.scss
@@ -61,6 +61,10 @@ button {
    margin-top: 2rem;
 }
 
+.color-primary {
+   color: var(--primary);
+}
+
 .info-box {
    border-radius: 4px;
    border-bottom: 5px solid var(--primary);
@@ -68,6 +72,21 @@ button {
 
 .fade-in {
    animation: fade-in 0.3s forwards;
+}
+
+.table-responsive {
+   border-radius: 4px;
+   padding: 0 10px;
+   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 2px 10px rgba(0, 0, 0, 0.08);
+   tr {
+      vertical-align: middle;
+   }
+   th,
+   td {
+      font-weight: normal;
+      padding-top: 15px;
+      padding-bottom: 15px;
+   }
 }
 
 @keyframes fade-in {
