--- a/client/src/styles/modules/_page-orders-history.scss
+++ b/client/src/styles/modules/_page-orders-history.scss
@@ -1,16 +1,3 @@
-.page-orders-history {
-   .table-responsive {
-      border-radius: 4px;
-      padding: 0 10px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 2px 10px rgba(0, 0, 0, 0.08);
-   }
-   tr {
-      vertical-align: middle;
-   }
-   th,
-   td {
-      font-weight: normal;
-      padding-top: 15px;
-      padding-bottom: 15px;
-   }
-}
+// .page-orders-history {
+
+// }
