--- a/client/src/styles/modules/_text-field.scss
+++ b/client/src/styles/modules/_text-field.scss
@@ -14,6 +14,11 @@
       box-shadow: none;
       left: 0;
    }
+   &.textarea {
+      &::before {
+         bottom: 7px;
+      }
+   }
    &.focus-active {
       .label-text {
          font-size: 0.8rem;
@@ -56,6 +61,7 @@
       transform: translateY(-50%);
       left: 10px;
       transition: font-size ease 0.2s, transform ease 0.2s;
+      resize: none;
    }
    .text-field {
       border: none;
