adding admin production crud

--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -17,3 +17,6 @@
 @import "./modules/google-btn";
 @import "./modules/page-order";
 @import "./modules/admin-products";
+@import "./modules/admin-product";
+@import "./modules/custom-radio-btn";
+@import "./modules/custom-checkbox";
